force-app/main/default/objects/SGWS_StepNameToFieldName__c/SGWS_StepNameToFieldName__c.object-meta.xml
<CustomObject>
    <label>StepNameToFieldName</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>StepNameToFieldName Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StepNameToFieldNames</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>