force-app/main/default/objects/SGWS_StepNameToFieldName__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>StepNameToFieldNames</relationshipLabel>
    <relationshipName>StepNameToFieldNames</relationshipName>
    <type>Lookup</type>
</CustomField>