force-app/main/default/objects/SGWS_StepNameToFieldName__c/fields/SGWS_FieldName__c.field-meta.xml
<CustomField>
    <fullName>SGWS_FieldName__c</fullName>
    <label>FieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>