force-app/main/default/objects/SGWS_StepNameToFieldName__c/fields/SGWS_StepName__c.field-meta.xml
<CustomField>
    <fullName>SGWS_StepName__c</fullName>
    <label>StepName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>