force-app/main/default/objects/SGWS_StepNameToFieldName__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SGWS_StepName__c</columns>
    <columns>SGWS_FieldName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>